    clauses are not invoked.

  - Repaired edge case where mapper would fail
    to fully update internal state when a relationship
    on a new mapper would establish a backref on the
    first mapper.

  - Fixed bug whereby if __eq__() was
    redefined, a relationship many-to-one lazyload
    would hit the __eq__() and fail.  [ticket:2260]
    Does not apply to 0.6.9.

-sql
  - Fixed bug regarding calculation of "from" list 
    for a select() element.  The "from" calc is now
    delayed, so that if the construct uses a Column
    object that is not yet attached to a Table,
    but is later associated with a Table, it generates
    SQL using the table as a FROM.   This change
    impacted fairly deeply the mechanics of how 
    the FROM list as well as the "correlates" collection
    is calculated, as some "clause adaption" schemes
    (these are used very heavily in the ORM)
    were relying upon the fact that the "froms" 
    collection would typically be cached before the 
    adaption completed.   The rework allows it
    such that the "froms" collection can be cleared
    and re-generated at any time.  [ticket:2261]

- schema
  - Added a slightly nicer __repr__() to SchemaItem
    classes.  Note the repr here can't fully support
    the "repr is the constructor" idea since schema
    items can be very deeply nested/cyclical, have
    late initialization of some things, etc.
    [ticket:2223]

- engine
  - The recreate() method in all pool classes uses
    self.__class__ to get at the type of pool
    to produce, in the case of subclassing.  Note 
    there's no usual need to subclass pools.
    [ticket:2254]

  - Improvement to multi-param statement logging,
    long lists of bound parameter sets will be 
    compressed with an informative indicator
    of the compression taking place.  Exception
    messages use the same improved formatting.  
    [ticket:2243]

- types
  - Extra keyword arguments to the base Float 